--- a/index.html
+++ b/index.html
@@ -3,135 +3,339 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>My Custom Dashboard</title>
+<title>Customizable Dashboard</title>
 <style>
   body {
     font-family: Arial, sans-serif;
     background: #f2f2f2;
-    margin: 0; padding: 0;
+    margin: 0; 
+    padding: 0; 
     display: flex; 
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     height: 100vh;
   }
-  .dashboard {
+
+  header, footer {
+    background: #333;
+    color: #fff;
+    padding: 10px 20px;
+  }
+
+  header h1 {
+    margin: 0;
+  }
+
+  #dashboard {
+    flex: 1;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
     padding: 20px;
+    overflow-y: auto;
   }
+
   .tile {
     background: white;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     padding: 20px;
-    text-align: center;
-    min-width: 150px;
-  }
-  .tile h1, .tile h2 {
-    margin: 0;
-    padding: 0;
-  }
-  .tile h1 {
-    font-size: 2.5em;
-    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   .tile h2 {
+    margin: 0 0 10px;
     font-size: 1.2em;
-    color: #666;
+    text-align: center;
   }
   .tile p {
-    font-size: 1.5em;
-    margin: 10px 0;
+    margin: 5px 0;
   }
   .updated {
     font-size: 0.8em;
     color: #999;
     margin-top: 10px;
   }
-  @media (max-width: 600px) {
-    .dashboard {
-      grid-template-columns: 1fr;
-    }
+
+  #config-button {
+    float: right;
+    background: #444;
+    border: none;
+    color: #fff;
+    padding: 5px 10px;
+    cursor: pointer;
+  }
+
+  /* Config Panel (modal) */
+  #config-panel-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right:0;
+    bottom:0;
+    background: rgba(0,0,0,0.5);
+    display: none;
+    align-items:center;
+    justify-content:center;
+  }
+  #config-panel {
+    background: #fff;
+    border-radius: 8px;
+    width: 90%;
+    max-width: 600px;
+    padding: 20px;
+    position: relative;
+  }
+  #config-panel h2 {
+    margin-top: 0;
+  }
+  #config-close {
+    position:absolute;
+    top:10px;
+    right:10px;
+    background:none;
+    border:none;
+    font-size:1.2em;
+    cursor:pointer;
+  }
+  .tile-config {
+    margin-bottom:20px;
+    border-bottom:1px solid #ccc;
+    padding-bottom:10px;
+  }
+  .tile-config:last-child {
+    border-bottom:none;
+  }
+  .tile-config h3 {
+    margin:0 0 10px;
+  }
+  .tile-config input[type="text"] {
+    width:100%;
+    margin-bottom:5px;
+  }
+  .tile-config label {
+    display:block;
+    font-size:0.9em;
+    margin:5px 0 3px;
+  }
+  #save-config {
+    background: #333;
+    color:#fff;
+    padding:10px 20px;
+    border:none;
+    cursor:pointer;
+    float:right;
   }
 </style>
 </head>
 <body>
 
-<div class="dashboard">
-  <div class="tile" id="weather-tile">
-    <h1>Weather</h1>
-    <h2 id="location"></h2>
-    <p id="temperature">-- °C</p>
-    <p id="conditions">Loading...</p>
-    <div class="updated" id="weather-updated"></div>
-  </div>
+<header>
+  <h1>My Custom Dashboard</h1>
+  <button id="config-button">Configure</button>
+</header>
 
-  <div class="tile" id="stocks-tile">
-    <h1>Stock: AAPL</h1>
-    <p id="stock-price">--</p>
-    <div class="updated" id="stocks-updated"></div>
+<div id="dashboard"></div>
+
+<footer>
+  <p>&copy; 2024 My Dashboard</p>
+</footer>
+
+<div id="config-panel-overlay">
+  <div id="config-panel">
+    <button id="config-close">&times;</button>
+    <h2>Dashboard Configuration</h2>
+    <form id="config-form"></form>
+    <button id="save-config">Save</button>
   </div>
 </div>
 
 <script>
-  // ========== Configuration ==========
-  const OPENWEATHER_API_KEY = "YOUR_OPENWEATHER_API_KEY";
-  const FINNHUB_API_KEY = "YOUR_FINNHUB_API_KEY";
-  
-  // Set your preferred location (City, Country Code or City ID)
-  const city = "New York"; 
-  const countryCode = "US";
+  // ========== Initial Tiles Config ==========
+  // This could be loaded from a server or local file if desired.
+  // Each tile has:
+  //   type: 'weather', 'stock', ...
+  //   visible: boolean
+  //   config: object with specific fields for that tile
+  let tilesConfig = {
+    tiles: [
+      {
+        id: "weather-1",
+        type: "weather",
+        visible: true,
+        config: {
+          city: "New York",
+          countryCode: "US",
+          apiKey: "YOUR_OPENWEATHER_API_KEY"
+        }
+      },
+      {
+        id: "stock-1",
+        type: "stock",
+        visible: true,
+        config: {
+          symbol: "AAPL",
+          apiKey: "YOUR_FINNHUB_API_KEY"
+        }
+      }
+    ]
+  };
 
-  // ========== Fetch Weather Data ==========
-  async function fetchWeather() {
-    try {
-      const weatherUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city},${countryCode}&units=metric&appid=${OPENWEATHER_API_KEY}`;
-      const response = await fetch(weatherUrl);
-      const data = await response.json();
-      
-      const location = `${data.name}, ${data.sys.country}`;
-      const temperature = `${Math.round(data.main.temp)} °C`;
-      const conditions = data.weather[0].description;
-      
-      document.getElementById("location").textContent = location;
-      document.getElementById("temperature").textContent = temperature;
-      document.getElementById("conditions").textContent = conditions;
-      document.getElementById("weather-updated").textContent = "Updated: " + new Date().toLocaleTimeString();
-    } catch (err) {
-      console.error("Error fetching weather data:", err);
+  // Load from localStorage if available
+  const savedConfig = localStorage.getItem("dashboardConfig");
+  if (savedConfig) {
+    tilesConfig = JSON.parse(savedConfig);
+  }
+
+  // ========== Data Fetch Functions ==========
+  async function fetchWeather(tile) {
+    const {city, countryCode, apiKey} = tile.config;
+    const url = `https://api.openweathermap.org/data/2.5/weather?q=${city},${countryCode}&units=metric&appid=${apiKey}`;
+    const response = await fetch(url);
+    if (!response.ok) throw new Error("Weather fetch error");
+    return await response.json();
+  }
+
+  async function fetchStock(tile) {
+    const {symbol, apiKey} = tile.config;
+    const url = `https://finnhub.io/api/v1/quote?symbol=${symbol}&token=${apiKey}`;
+    const response = await fetch(url);
+    if (!response.ok) throw new Error("Stock fetch error");
+    return await response.json();
+  }
+
+  // ========== Render Tiles ==========
+  const dashboard = document.getElementById("dashboard");
+
+  async function renderTiles() {
+    dashboard.innerHTML = '';
+    for (let tile of tilesConfig.tiles) {
+      if (!tile.visible) continue;
+      const tileEl = document.createElement("div");
+      tileEl.className = "tile";
+
+      // Handle different tile types
+      if (tile.type === "weather") {
+        tileEl.innerHTML = `
+          <h2>Weather</h2>
+          <p>Loading...</p>
+        `;
+        try {
+          const data = await fetchWeather(tile);
+          tileEl.innerHTML = `
+            <h2>Weather</h2>
+            <p><strong>${data.name}, ${data.sys.country}</strong></p>
+            <p>${Math.round(data.main.temp)} °C, ${data.weather[0].description}</p>
+            <div class="updated">Updated: ${new Date().toLocaleTimeString()}</div>
+          `;
+        } catch (err) {
+          tileEl.innerHTML += `<p>Error loading weather</p>`;
+        }
+      } else if (tile.type === "stock") {
+        tileEl.innerHTML = `
+          <h2>Stock: ${tile.config.symbol}</h2>
+          <p>Loading...</p>
+        `;
+        try {
+          const data = await fetchStock(tile);
+          tileEl.innerHTML = `
+            <h2>Stock: ${tile.config.symbol}</h2>
+            <p>Price: $${data.c.toFixed(2)}</p>
+            <div class="updated">Updated: ${new Date().toLocaleTimeString()}</div>
+          `;
+        } catch (err) {
+          tileEl.innerHTML += `<p>Error loading stock</p>`;
+        }
+      } else {
+        tileEl.innerHTML = `<h2>Unknown Tile</h2>`;
+      }
+
+      dashboard.appendChild(tileEl);
     }
   }
 
-  // ========== Fetch Stock Data ==========
-  async function fetchStock() {
-    try {
-      // Finnhub stock quote endpoint
-      const symbol = "AAPL";
-      const stockUrl = `https://finnhub.io/api/v1/quote?symbol=${symbol}&token=${FINNHUB_API_KEY}`;
-      const response = await fetch(stockUrl);
-      const data = await response.json();
+  // ========== Configuration Panel ==========
+  const configOverlay = document.getElementById("config-panel-overlay");
+  const configButton = document.getElementById("config-button");
+  const configClose = document.getElementById("config-close");
+  const configForm = document.getElementById("config-form");
+  const saveConfigButton = document.getElementById("save-config");
 
-      const currentPrice = data.c; // Current price
-      document.getElementById("stock-price").textContent = `$${currentPrice.toFixed(2)}`;
-      document.getElementById("stocks-updated").textContent = "Updated: " + new Date().toLocaleTimeString();
-    } catch (err) {
-      console.error("Error fetching stock data:", err);
-    }
+  function openConfigPanel() {
+    configForm.innerHTML = '';
+    tilesConfig.tiles.forEach(tile => {
+      const tileDiv = document.createElement("div");
+      tileDiv.className = "tile-config";
+
+      tileDiv.innerHTML = `<h3>${tile.type.charAt(0).toUpperCase() + tile.type.slice(1)} Tile</h3>
+        <label><input type="checkbox" name="visible-${tile.id}" ${tile.visible ? 'checked' : ''}> Visible</label>`;
+
+      // Add fields depending on tile type
+      if (tile.type === "weather") {
+        tileDiv.innerHTML += `
+          <label for="city-${tile.id}">City:</label>
+          <input type="text" id="city-${tile.id}" name="city-${tile.id}" value="${tile.config.city}">
+          <label for="country-${tile.id}">Country Code:</label>
+          <input type="text" id="country-${tile.id}" name="country-${tile.id}" value="${tile.config.countryCode}">
+          <label for="weatherKey-${tile.id}">API Key:</label>
+          <input type="text" id="weatherKey-${tile.id}" name="weatherKey-${tile.id}" value="${tile.config.apiKey}">
+        `;
+      } else if (tile.type === "stock") {
+        tileDiv.innerHTML += `
+          <label for="symbol-${tile.id}">Symbol:</label>
+          <input type="text" id="symbol-${tile.id}" name="symbol-${tile.id}" value="${tile.config.symbol}">
+          <label for="stockKey-${tile.id}">API Key:</label>
+          <input type="text" id="stockKey-${tile.id}" name="stockKey-${tile.id}" value="${tile.config.apiKey}">
+        `;
+      }
+
+      configForm.appendChild(tileDiv);
+    });
+
+    configOverlay.style.display = "flex";
   }
 
-  // ========== Update Function ==========
-  function updateDashboard() {
-    fetchWeather();
-    fetchStock();
+  function closeConfigPanel() {
+    configOverlay.style.display = "none";
   }
 
-  // Initial load
-  updateDashboard();
+  function saveConfig() {
+    // Read form values and update tilesConfig
+    tilesConfig.tiles = tilesConfig.tiles.map(tile => {
+      const visible = document.querySelector(`[name="visible-${tile.id}"]`).checked;
+      if (tile.type === "weather") {
+        const city = document.getElementById(`city-${tile.id}`).value;
+        const country = document.getElementById(`country-${tile.id}`).value;
+        const apiKey = document.getElementById(`weatherKey-${tile.id}`).value;
+        tile.config.city = city;
+        tile.config.countryCode = country;
+        tile.config.apiKey = apiKey;
+      } else if (tile.type === "stock") {
+        const symbol = document.getElementById(`symbol-${tile.id}`).value;
+        const apiKey = document.getElementById(`stockKey-${tile.id}`).value;
+        tile.config.symbol = symbol;
+        tile.config.apiKey = apiKey;
+      }
+      tile.visible = visible;
+      return tile;
+    });
 
-  // Update every 5 minutes
-  setInterval(updateDashboard, 5 * 60 * 1000);
+    // Save to localStorage
+    localStorage.setItem("dashboardConfig", JSON.stringify(tilesConfig));
+    closeConfigPanel();
+    renderTiles();
+  }
+
+  configButton.addEventListener("click", openConfigPanel);
+  configClose.addEventListener("click", closeConfigPanel);
+  saveConfigButton.addEventListener("click", saveConfig);
+
+  // Initial render
+  renderTiles();
+
+  // Optional: Refresh tiles every 5 minutes
+  setInterval(renderTiles, 5 * 60 * 1000);
 </script>
 
 </body>
